chore: wake once a day, update about

--- a/.example.env
+++ b/.example.env
@@ -1,2 +1,5 @@
+AYORADIO_MODE="PRODUCTION" # or "DEV"
 AYORADIO_INTERFACE="device"
 DB_PATH="./path/to/db"
+MPVSOCKET_PATH="/tmp/mpvsocket"
+WAKE_DEVICE="mac" # or alias in gowol 
